Fixed mobile text-wrapping issue

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 .mdl-layout__title {
   font-size: 20px;
+  max-width: 100%;
   text-align: center;
   font-weight: bold;
   padding-top: 10px;
